--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,2 +1,10 @@
-<h1>Privacy Policy</h1>
-<p>This tool is used internally by The Great Deal Co. to analyze public ad data from Meta platforms via the Ad Library API. We do not collect or store personal information from users. This app does not process or share user data.</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Privacy Policy</title>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p>This tool is for internal use only by The Great Deal Co. We access public Facebook Ad Library data for research and analysis. No user data is collected, stored, or shared.</p>
+</body>
+</html>
