--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head><title>Placeholder</title></head>
+<head>
+  <title>The Great Deal</title>
+</head>
 <body>
-  <h1>Placeholder Homepage</h1>
-  <p>This is a placeholder for GitHub Pages publishing. You can visit <a href="privacypolicy.html">Privacy Policy</a>.</p>
+  <h1>Welcome to The Great Deal</h1>
+  <p>This is an independent project developed by <strong>Dil Dobar</strong>, focused on creative ad research and analysis.</p>
+  <p>For privacy-related concerns, view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
+  <p>Contact: <a href="mailto:thegreatdeal.co@gmail.com">thegreatdeal.co@gmail.com</a></p>
 </body>
 </html>
