--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Welcome to The Great Deal</h1>
-  <p>This is an independent project developed by <strong>Dil Dobar</strong>, focused on creative ad research and analysis.</p>
+  <p>This is an independent project developed by <strong>Dilan Dobardžić</strong>, focused on creative ad research and analysis.</p>
   <p>For privacy-related concerns, view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
   <p>Contact: <a href="mailto:thegreatdeal.co@gmail.com">thegreatdeal.co@gmail.com</a></p>
 </body>
