--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
   <h1>Welcome to The Great Deal</h1>
   <p>This is an independent project developed by <strong>Dilan Dobardžić</strong>, focused on creative ad research and analysis.</p>
+  <p><em>Stay tuned for an upcoming collaboration with <strong>Magnétique</strong>.</em></p>
   <p>For privacy-related concerns, view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
-  <p>Contact: <a href="mailto:thegreatdeal.co@gmail.com">thegreatdeal.co@gmail.com</a></p>
+  <p>Contact: <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
 </body>
 </html>
