--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Great Deal</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    header {
+      background-color: #111827;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    main {
+      max-width: 700px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+      background-color: white;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      border-radius: 8px;
+      padding: 2rem;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      line-height: 1.6;
+    }
+
+    a {
+      color: #2563eb;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
+      padding: 2rem 0;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to The Great Deal</h1>
-  <p>This is an independent project developed by <strong>Dilan Dobardžić</strong>, focused on creative ad research and analysis.</p>
-  <p><em>Stay tuned for an upcoming collaboration with <strong>Magnétique</strong>.</em></p>
-  <p>For privacy-related concerns, view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
-  <p>Contact: <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
+
+  <header>
+    <h1>The Great Deal</h1>
+    <p>Creative Ad Research & Analysis</p>
+  </header>
+
+  <main>
+    <p>This is an independent project developed by <strong>Dilan Dobardžić</strong>, focused on identifying and deconstructing high-performing advertising strategies across Meta platforms.</p>
+
+    <p>We’re currently working on an exciting upcoming collaboration with <strong>Magnétique</strong>. Stay tuned for more!</p>
+
+    <p>If you have privacy-related concerns, you can view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
+
+    <p>Contact us at: <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
+  </main>
+
+  <footer>
+    &copy; 2025 The Great Deal. All rights reserved.
+  </footer>
+
 </body>
 </html>
