--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="The Great Deal – Creative ad research and analysis by Dilan Dobardžić." />
+  <meta property="og:title" content="The Great Deal" />
+  <meta property="og:description" content="Independent ad analysis project with an upcoming collaboration with Magnétique." />
   <title>The Great Deal</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #f9fafb;
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
+      padding: 0;
+      color: #1f2937;
     }
 
     header {
-      background-color: #111827;
+      background-color: #1f2937;
       color: white;
       padding: 2rem 1rem;
       text-align: center;
@@ -21,21 +26,18 @@
 
     main {
       max-width: 700px;
-      margin: 3rem auto;
+      margin: 2rem auto;
       padding: 0 1rem;
-      background-color: white;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      border-radius: 8px;
-      padding: 2rem;
+      line-height: 1.6;
     }
 
     h1 {
       font-size: 2rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 1rem;
     }
 
     p {
-      line-height: 1.6;
+      margin-bottom: 1rem;
     }
 
     a {
@@ -47,34 +49,46 @@
       text-decoration: underline;
     }
 
+    .button {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.7rem 1.4rem;
+      background-color: #2563eb;
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .button:hover {
+      background-color: #1e40af;
+    }
+
     footer {
       text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-      padding: 2rem 0;
+      padding: 2rem 1rem;
+      font-size: 0.875rem;
+      color: #6b7280;
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>The Great Deal</h1>
     <p>Creative Ad Research & Analysis</p>
   </header>
 
   <main>
-    <p>This is an independent project developed by <strong>Dilan Dobardžić</strong>, focused on identifying and deconstructing high-performing advertising strategies across Meta platforms.</p>
+    <p><strong>Dilan Dobardžić</strong> leads this independent project focused on high-performance ad creative analysis and testing strategies.</p>
+    <p>We're currently working on an exciting collaboration with <strong>Magnétique</strong>. Stay tuned for updates!</p>
+    <p>For privacy-related concerns, view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
+    <p>Contact us directly at <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
 
-    <p>We’re currently working on an exciting upcoming collaboration with <strong>Magnétique</strong>. Stay tuned for more!</p>
-
-    <p>If you have privacy-related concerns, you can view our <a href="privacypolicy.html">Privacy Policy</a>.</p>
-
-    <p>Contact us at: <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
+    <a href="mailto:dilan.dobardzic@thegreatdeal.live" class="button">Get in Touch</a>
   </main>
 
   <footer>
     &copy; 2025 The Great Deal. All rights reserved.
   </footer>
-
 </body>
 </html>
