--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta property="og:description" content="Independent ad analysis project with an upcoming collaboration with Magnétique." />
   <title>The Great Deal</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
