--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,44 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy | The Great Deal</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="The Great Deal – Creative ad research and analysis by Dilan Dobardžić." />
+  <meta property="og:title" content="The Great Deal" />
+  <meta property="og:description" content="Independent ad analysis project with an upcoming collaboration with Magnétique." />
+  <title>The Great Deal</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #111;
-      color: #f0f0f0;
+    :root {
+      --primary: #1f2937;
+      --accent: #2563eb;
+      --background: #f9fafb;
+      --text: #1f2937;
+      --muted: #6b7280;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
-      padding: 2rem;
+      padding: 0;
+    }
+
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: var(--background);
+      color: var(--text);
       line-height: 1.6;
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
+
+    header {
+      background-color: var(--primary);
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
     }
-    h1 {
-      color: #ffffff;
-      font-size: 2.5rem;
+
+    header h1 {
+      font-size: 2.2rem;
+      margin-bottom: 0.25rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #d1d5db;
+    }
+
+    main {
+      max-width: 720px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      color: var(--primary);
+    }
+
+    p {
       margin-bottom: 1rem;
     }
-    p {
-      font-size: 1.1rem;
-      color: #cccccc;
-    }
+
     a {
-      color: #4da6ff;
+      color: var(--accent);
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
+    }
+
+    .button {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.7rem 1.4rem;
+      background-color: var(--accent);
+      color: white;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .button:hover {
+      background-color: #1e40af;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.875rem;
+      color: var(--muted);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Privacy Policy</h1>
-    <p>This tool is intended for internal use only by <strong>The Great Deal</strong>. We access public Facebook Ad Library data for research and analysis. No user data is collected, stored, or shared.</p>
-    <p>For more information, contact: <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
-  </div>
+  <header>
+    <h1>The Great Deal</h1>
+    <p>Creative Ad Research & Analysis</p>
+  </header>
+
+  <main>
+    <!-- This part will be unique per page -->
+    <h2>Privacy Policy</h2>
+    <p>This tool is intended for internal use only by The Great Deal. We access public Facebook Ad Library data for research and analysis.</p>
+    <p>No user data is collected, stored, or shared.</p>
+    <p>For questions, contact <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
+  </main>
+
+  <footer>
+    &copy; 2025 The Great Deal. All rights reserved.
+  </footer>
 </body>
 </html>
