--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -6,57 +6,35 @@
   <meta name="description" content="The Great Deal – Creative ad research and analysis by Dilan Dobardžić." />
   <meta property="og:title" content="The Great Deal" />
   <meta property="og:description" content="Independent ad analysis project with an upcoming collaboration with Magnétique." />
-  <title>The Great Deal</title>
+  <title>Privacy Policy – The Great Deal</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
-    :root {
-      --primary: #1f2937;
-      --accent: #2563eb;
-      --background: #f9fafb;
-      --text: #1f2937;
-      --muted: #6b7280;
-    }
-
-    * {
-      box-sizing: border-box;
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #f9fafb;
       margin: 0;
       padding: 0;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background-color: var(--background);
-      color: var(--text);
-      line-height: 1.6;
+      color: #1f2937;
     }
 
     header {
-      background-color: var(--primary);
+      background-color: #1f2937;
       color: white;
       padding: 2rem 1rem;
       text-align: center;
     }
 
-    header h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.25rem;
-    }
-
-    header p {
-      font-size: 1.1rem;
-      color: #d1d5db;
-    }
-
     main {
-      max-width: 720px;
+      max-width: 700px;
       margin: 2rem auto;
       padding: 0 1rem;
+      line-height: 1.6;
     }
 
-    h2 {
-      font-size: 1.5rem;
+    h1 {
+      font-size: 2rem;
       margin-bottom: 1rem;
-      color: var(--primary);
     }
 
     p {
@@ -64,7 +42,7 @@
     }
 
     a {
-      color: var(--accent);
+      color: #2563eb;
       text-decoration: none;
     }
 
@@ -72,26 +50,11 @@
       text-decoration: underline;
     }
 
-    .button {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.7rem 1.4rem;
-      background-color: var(--accent);
-      color: white;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .button:hover {
-      background-color: #1e40af;
-    }
-
     footer {
       text-align: center;
       padding: 2rem 1rem;
       font-size: 0.875rem;
-      color: var(--muted);
+      color: #6b7280;
     }
   </style>
 </head>
@@ -102,7 +65,6 @@
   </header>
 
   <main>
-    <!-- This part will be unique per page -->
     <h2>Privacy Policy</h2>
     <p>This tool is intended for internal use only by The Great Deal. We access public Facebook Ad Library data for research and analysis.</p>
     <p>No user data is collected, stored, or shared.</p>
