--- a/index.html
+++ b/index.html
@@ -7,37 +7,64 @@
   <meta property="og:title" content="The Great Deal" />
   <meta property="og:description" content="Independent ad analysis project with an upcoming collaboration with Magnétique." />
   <title>The Great Deal</title>
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background-color: #f9fafb;
+    :root {
+      --primary: #1f2937;
+      --accent: #2563eb;
+      --background: #f9fafb;
+      --text: #1f2937;
+      --muted: #6b7280;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      color: #1f2937;
     }
 
-    header {
-      background-color: #1f2937;
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    main {
-      max-width: 700px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: var(--background);
+      color: var(--text);
       line-height: 1.6;
     }
 
-    h1 {
-      font-size: 2rem;
+    header {
+      background-color: var(--primary);
+      color: white;
+      padding: 3rem 1rem 2rem 1rem;
+      text-align: center;
+      position: relative;
+    }
+
+    .logo {
+      display: block;
+      margin: 0 auto 1rem auto;
+      max-height: 64px;
+    }
+
+    header h1 {
+      font-size: 2.4rem;
+      margin-bottom: 0.25rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #d1d5db;
+    }
+
+    main {
+      max-width: 720px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: var(--primary);
     }
 
     p {
@@ -45,7 +72,7 @@
     }
 
     a {
-      color: #2563eb;
+      color: var(--accent);
       text-decoration: none;
     }
 
@@ -57,7 +84,7 @@
       display: inline-block;
       margin-top: 1.5rem;
       padding: 0.7rem 1.4rem;
-      background-color: #2563eb;
+      background-color: var(--accent);
       color: white;
       border-radius: 6px;
       text-decoration: none;
@@ -72,12 +99,14 @@
       text-align: center;
       padding: 2rem 1rem;
       font-size: 0.875rem;
-      color: #6b7280;
+      color: var(--muted);
     }
   </style>
 </head>
 <body>
   <header>
+    <!-- Placeholder for logo -->
+    <img src="logo.png" alt="The Great Deal Logo" class="logo" />
     <h1>The Great Deal</h1>
     <p>Creative Ad Research & Analysis</p>
   </header>
