--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,42 +3,61 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="The Great Deal – Creative ad research and analysis by Dilan Dobardžić." />
-  <meta property="og:title" content="The Great Deal" />
-  <meta property="og:description" content="Independent ad analysis project with an upcoming collaboration with Magnétique." />
-  <title>Privacy Policy – The Great Deal</title>
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-
+  <meta name="description" content="Privacy Policy – The Great Deal by Dilan Dobardžić" />
+  <meta property="og:title" content="Privacy Policy | The Great Deal" />
+  <meta property="og:description" content="Read our privacy policy for The Great Deal ad research project." />
+  <title>Privacy Policy | The Great Deal</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      background-color: #f9fafb;
+    :root {
+      --primary: #1f2937;
+      --accent: #2563eb;
+      --background: #f9fafb;
+      --text: #1f2937;
+      --muted: #6b7280;
+    }
+
+    * {
       margin: 0;
       padding: 0;
-      color: #1f2937;
+      box-sizing: border-box;
     }
 
-    header {
-      background-color: #1f2937;
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    main {
-      max-width: 700px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: var(--background);
+      color: var(--text);
       line-height: 1.6;
     }
 
-    h1 {
-      font-size: 2rem;
+    header {
+      background-color: var(--primary);
+      color: white;
+      padding: 2.5rem 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.2rem;
+      margin-bottom: 0.25rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #d1d5db;
+    }
+
+    main {
+      max-width: 720px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    h2 {
+      font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: var(--primary);
     }
 
     p {
@@ -46,7 +65,7 @@
     }
 
     a {
-      color: #2563eb;
+      color: var(--accent);
       text-decoration: none;
     }
 
@@ -58,7 +77,7 @@
       text-align: center;
       padding: 2rem 1rem;
       font-size: 0.875rem;
-      color: #6b7280;
+      color: var(--muted);
     }
   </style>
 </head>
@@ -70,9 +89,10 @@
 
   <main>
     <h2>Privacy Policy</h2>
-    <p>This tool is intended for internal use only by The Great Deal. We access public Facebook Ad Library data for research and analysis.</p>
-    <p>No user data is collected, stored, or shared.</p>
-    <p>For questions, contact <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a></p>
+    <p>This tool is intended for internal use only by The Great Deal.</p>
+    <p>We access publicly available data from the Facebook Ad Library strictly for research and creative testing purposes.</p>
+    <p>No user data is collected, stored, or shared by this site.</p>
+    <p>If you have any privacy-related concerns, feel free to reach out at <a href="mailto:dilan.dobardzic@thegreatdeal.live">dilan.dobardzic@thegreatdeal.live</a>.</p>
   </main>
 
   <footer>
