--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -34,13 +34,14 @@
     header {
       background-color: var(--primary);
       color: white;
-      padding: 2.5rem 1rem;
+      padding: 3rem 1rem 2rem 1rem;
       text-align: center;
     }
 
-    header h1 {
-      font-size: 2.2rem;
-      margin-bottom: 0.25rem;
+    .logo {
+      display: block;
+      margin: 0 auto 1rem auto;
+      max-height: 96px;
     }
 
     header p {
@@ -83,7 +84,7 @@
 </head>
 <body>
   <header>
-    <h1>The Great Deal</h1>
+    <img src="logo.png" alt="The Great Deal Logo" class="logo" />
     <p>Creative Ad Research & Analysis</p>
   </header>
 
