--- a/index.html
+++ b/index.html
@@ -36,24 +36,29 @@
       color: white;
       padding: 3rem 1rem 2rem 1rem;
       text-align: center;
-      position: relative;
     }
 
     .logo {
       display: block;
-      margin: 0 auto 1rem auto;
-      max-height: 96px;
+      margin: 0 auto 1.5rem auto;
+      max-height: 128px;
+      animation: fadeIn 1s ease-out forwards;
+      opacity: 0;
     }
 
-    header p {
-      font-size: 1.1rem;
+    .tagline {
+      font-size: 1.2rem;
       color: #d1d5db;
+      animation: fadeIn 1s ease-out 0.3s forwards;
+      opacity: 0;
     }
 
     main {
       max-width: 720px;
       margin: 2rem auto;
       padding: 0 1rem;
+      animation: fadeIn 1s ease-out 0.6s forwards;
+      opacity: 0;
     }
 
     h2 {
@@ -84,9 +89,11 @@
       border-radius: 6px;
       text-decoration: none;
       font-weight: 500;
+      transition: transform 0.2s ease, background-color 0.3s ease;
     }
 
     .button:hover {
+      transform: scale(1.05);
       background-color: #1e40af;
     }
 
@@ -95,13 +102,26 @@
       padding: 2rem 1rem;
       font-size: 0.875rem;
       color: var(--muted);
+      animation: fadeIn 1s ease-out 1s forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <img src="logo.png" alt="The Great Deal Logo" class="logo" />
-    <p>Creative Ad Research & Analysis</p>
+    <p class="tagline">Creative Ad Research & Analysis</p>
   </header>
 
   <main>
