--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -19,13 +19,13 @@
     }
 
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       background-color: var(--background);
       color: var(--text);
       line-height: 1.6;
@@ -40,19 +40,25 @@
 
     .logo {
       display: block;
-      margin: 0 auto 1rem auto;
-      max-height: 96px;
+      margin: 0 auto 1.5rem auto;
+      max-height: 128px;
+      animation: fadeIn 1s ease-out forwards;
+      opacity: 0;
     }
 
-    header p {
-      font-size: 1.1rem;
+    .tagline {
+      font-size: 1.2rem;
       color: #d1d5db;
+      animation: fadeIn 1s ease-out 0.3s forwards;
+      opacity: 0;
     }
 
     main {
       max-width: 720px;
       margin: 2rem auto;
       padding: 0 1rem;
+      animation: fadeIn 1s ease-out 0.6s forwards;
+      opacity: 0;
     }
 
     h2 {
@@ -79,13 +85,26 @@
       padding: 2rem 1rem;
       font-size: 0.875rem;
       color: var(--muted);
+      animation: fadeIn 1s ease-out 1s forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <img src="logo.png" alt="The Great Deal Logo" class="logo" />
-    <p>Creative Ad Research & Analysis</p>
+    <p class="tagline">Creative Ad Research & Analysis</p>
   </header>
 
   <main>
