--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -8,7 +8,6 @@
   <meta property="og:description" content="Read our privacy policy for The Great Deal ad research project." />
   <title>Privacy Policy | The Great Deal</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
     :root {
       --primary: #1f2937;
@@ -19,9 +18,9 @@
     }
 
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
@@ -34,31 +33,25 @@
     header {
       background-color: var(--primary);
       color: white;
-      padding: 3rem 1rem 2rem 1rem;
+      padding: 2rem 1rem 1.5rem;
       text-align: center;
     }
 
     .logo {
       display: block;
-      margin: 0 auto 1.5rem auto;
+      margin: 0 auto 0.5rem auto;
       max-height: 300px;
-      animation: fadeIn 1s ease-out forwards;
-      opacity: 0;
     }
 
     .tagline {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       color: #d1d5db;
-      animation: fadeIn 1s ease-out 0.3s forwards;
-      opacity: 0;
     }
 
     main {
       max-width: 720px;
       margin: 2rem auto;
       padding: 0 1rem;
-      animation: fadeIn 1s ease-out 0.6s forwards;
-      opacity: 0;
     }
 
     h2 {
@@ -85,25 +78,14 @@
       padding: 2rem 1rem;
       font-size: 0.875rem;
       color: var(--muted);
-      animation: fadeIn 1s ease-out 1s forwards;
-      opacity: 0;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="The Great Deal Logo" class="logo" />
+    <a href="index.html">
+      <img src="logo.png" alt="The Great Deal Logo" class="logo" />
+    </a>
     <p class="tagline">Creative Ad Research & Analysis</p>
   </header>
 
