--- a/index.html
+++ b/index.html
@@ -33,19 +33,32 @@
     header {
       background-color: var(--primary);
       color: white;
-      padding: 2rem 1rem 1.5rem;
+      padding: 1.5rem 1rem;
       text-align: center;
     }
 
     .logo {
       display: block;
-      margin: 0 auto 0.5rem auto;
+      margin: 0 auto;
       max-height: 300px;
+      animation: fadeIn 1.2s ease-out;
     }
 
     .tagline {
       font-size: 1.1rem;
       color: #d1d5db;
+      margin-top: 0.5rem;
+      animation: slideIn 1s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     main {
@@ -82,6 +95,7 @@
       border-radius: 6px;
       text-decoration: none;
       font-weight: 500;
+      animation: fadeIn 1.5s ease-out;
     }
 
     .button:hover {
