--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
     header {
       background-color: var(--primary);
       color: white;
-      padding: 1.5rem 1rem;
+      padding: 1.5rem 1rem 1rem 1rem;
       text-align: center;
+      position: relative;
     }
 
     .logo {
       display: block;
-      margin: 0 auto;
+      margin: 0 auto 0.25rem auto;
       max-height: 300px;
-      animation: fadeIn 1.2s ease-out;
+      animation: fadeIn 1.5s ease;
+      cursor: pointer;
     }
 
     .tagline {
